--- a/debian-vm/debian/changelog
+++ b/debian-vm/debian/changelog
@@ -1,3 +1,9 @@
+xen (2001:4.8.4-1) --release; urgency=medium
+
+  * version 4.8.4-1
+
+ -- Marek Marczykowski-Górecki <marmarek@invisiblethingslab.com>  Mon, 16 Jul 2018 13:56:57 +0200
+
 xen (2001:4.8.3-9) unstable; urgency=medium
 
   [ Frédéric Pierret ]
